[tool.poetry]
name = "decrypto-enc"
version = "0.1.0"
description = ""
authors = ["luke"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
cryptography = "^44.0.0"
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
